2007-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Set qlist before using it.

2007-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c, server-src/cmdline.c,
	  server-src/find.c: Call holding_get_files will NULL date_list.
	* server-src/holding.c (holding_get_directories_per_disk): New
	  date_list param, scan only the date_list directories.
	* server-src/holding.c (holding_get_directories): New
	  date_list param.
	* server-src/holding.c (holding_get_files): New
	  date_list param.
	* server-src/holding.c (holding_get_files_for_flush): Don't loop over
	  date.
	* server-src/holding.h (holding_get_directories,
	  holding_get_files): New prototype.

2007-05-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Open an IPv4 and an IPv6 socket.
	* common-src/bsdudp-security.c: Open an IPv4 and an IPv6 socket.

2007-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcrypt-ossl-asym.sh.in: Use CLIENT_LOGIN.
	* server-src/amcrypt-ossl.sh.in: Use CLIENT_LOGIN.

2007-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* util.c (cmp_sockaddr): Fix compilation.

2007-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* util.c (cmp_sockaddr): un-map V4mapped address before comparison.
	* common-src/security-util.c: add debugging.

2007-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Fix double free.

2007-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloc.c (debug_vstrallocf): Remove file and line.
	* common-src/amanda.h (vstrallocf): Change define.

2007-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: define sockaddr_storage and ss_family.
	* common-src/amanda.h: define INET_ADDRSTRLEN.
	* config/acinclude.m4i (AC_SOCKADDR_STORAGE): New macro.
	* configure.in: AC_SOCKADDR_STORAGE.

2007-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define AI_V4MAPPED and AI_ALL.
