@@ -1,3 +1,6 @@
+2007-05-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/dumper.c (read_datafd): Reset timeout after the write.
+
 2007-05-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/sendsize.c: Set qlist before using it.
 
